--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -122,7 +122,7 @@
     <string name="landmark">ਲੈਂਡਮਾਰਕ</string>
     <string name="area">ਖੇਤਰ</string>
     <string name="pin_code">ਪਿੰਨ ਕੋਡ</string>
-    <string name="upload_dhaba_pictures">aਾਬੇ ਦੀ ਤਸਵੀਰ ਅਪਲੋਡ ਕਰੋ</string>
+    <string name="upload_dhaba_pictures">ਢਾਬੇ ਦੀ ਤਸਵੀਰ ਅਪਲੋਡ ਕਰੋ</string>
     <string name="save_as_draft">ਡਰਾਫਟ ਦੇ ਰੂਪ ਵਿੱਚ ਸੁਰੱਖਿਅਤ ਕਰੋ</string>
     <string name="owner_name">ਮਾਲਕ ਦਾ ਨਾਮ *</string>
     <string name="phone_number">ਫੋਨ ਨੰਬਰ</string>
@@ -252,7 +252,7 @@
     <string name="enter_email_id">ਕਿਰਪਾ ਕਰਕੇ ਇੱਕ ਵੈਧ ਈਮੇਲ-ਆਈਡੀ ਦਾਖਲ ਕਰੋ</string>
     <string name="enter_mobile_number">ਕਿਰਪਾ ਕਰਕੇ ਮੋਬਾਈਲ ਨੰਬਰ ਦਾਖਲ ਕਰੋ</string>
     <string name="updating_profile">ਪ੍ਰੋਫਾਈਲ ਅਪਡੇਟ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ ..</string>
-    <string name="enter_dhaba_name">ਕਿਰਪਾ ਕਰਕੇ ਢਾਬਾ  ਦਾ ਨਾਮ ਦਰਜ ਕਰੋ.</string>
+    <string name="enter_dhaba_name">ਕਿਰਪਾ ਕਰਕੇ ਢਾਬਾ ਦਾ ਨਾਮ ਦਰਜ ਕਰੋ.</string>
     <string name="location_alert_dialog">ਟਿਕਾਣਾ ਸੇਵਾ ਯੋਗ ਨਹੀਂ ਹੈ, ਕੀ ਤੁਸੀਂ ਇਸਨੂੰ ਸਮਰੱਥ ਬਣਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ?</string>
     <string name="unable_to_fetch_address">ਆਪਣਾ ਮੌਜੂਦਾ ਪਤਾ ਪ੍ਰਾਪਤ ਕਰਨ ਨੂੰ ਸਮਰੱਥ</string>
     <string name="assigned_to">ਨੂੰ ਦਿੱਤਾ</string>
@@ -336,5 +336,48 @@
     <string name="select_bank">ਬੈਂਕ ਦੀ ਚੋਣ ਕਰੋ</string>
     <string name="owner">ਮਾਲਕ</string>
     <string name="deletion_confirmation">ਕੀ ਤੁਸੀਂ ਇਸ ਢਾਬੇ ਨੂੰ ਹਟਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ?</string>
+    <string name="alternative_contact_person">ਵਿਕਲਪਕ ਸੰਪਰਕ ਵਿਅਕਤੀ</string>
+    <string name="alternative_contact_number">ਵਿਕਲਪਕ ਸੰਪਰਕ ਨੰਬਰ</string>
+    <string name="alternative_contact_designation">ਵਿਕਲਪਕ ਸੰਪਰਕ ਅਹੁਦਾ</string>
+    <string name="enter_contact_person">ਕਿਰਪਾ ਕਰਕੇ ਵਿਕਲਪਕ ਸੰਪਰਕ ਵਿਅਕਤੀ ਦਾ ਨਾਮ ਦਾਖਲ ਕਰੋ.</string>
+    <string name="enter_alternative_number">ਕਿਰਪਾ ਕਰਕੇ ਵਿਕਲਪਿਕ ਸੰਪਰਕ ਨੰਬਰ ਦਾਖਲ ਕਰੋ.</string>
+    <string name="enter_alternative_contact_designation">ਕਿਰਪਾ ਕਰਕੇ ਵਿਕਲਪਕ ਸੰਪਰਕ ਵਿਅਕਤੀ ਦਾ ਅਹੁਦਾ ਦਾਖਲ ਕਰੋ.</string>
+    <string name="add_highway">ਇਸ ਹਾਈਵੇ ਨੂੰ ਸ਼ਾਮਲ ਕਰੋ</string>
+    <string name="highway_confirmation">ਕੀ ਤੁਸੀਂ ਜੋੜਨਾ ਚਾਹੁੰਦੇ ਹੋ</string>
+    <string name="_dhaba_name">ਢਾਬੇ ਦਾ ਨਾਮ</string>
+    <string name="enter_dhaba_details_first">ਕਿਰਪਾ ਕਰਕੇ ਪਹਿਲਾਂ ਢਾਬੇ ਦਾ ਵੇਰਵਾ ਭਰੋ.</string>
+    <string name="choose_mechanic">ਕਿਰਪਾ ਕਰਕੇ ਮਕੈਨਿਕ ਸ਼ਾਪ 24x7 ਚੋਣ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="choose_mechanic_day">ਕਿਰਪਾ ਕਰਕੇ ਮਕੈਨਿਕ ਸ਼ਾਪ ਡੇਅ ਵਿਕਲਪ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="choose_puncture">ਕਿਰਪਾ ਕਰਕੇ ਪੰਕਚਰ ਸ਼ਾਪ 24x7 ਚੋਣ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="choose_puncture_day">ਕਿਰਪਾ ਕਰਕੇ ਪੰਕਚਰ ਸ਼ਾਪ ਡੇਅ ਵਿਕਲਪ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="choose_daily_utility">ਕਿਰਪਾ ਕਰਕੇ ਰੋਜ਼ਾਨਾ ਸਹੂਲਤ 24x7 ਦੁਕਾਨ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="choose_utility_day">ਕਿਰਪਾ ਕਰਕੇ ਰੋਜ਼ਾਨਾ ਸਹੂਲਤ ਸ਼ਾਪ ਡੇਅ ਵਿਕਲਪ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="enter_valid_alt_number">ਕਿਰਪਾ ਕਰਕੇ ਵੈਧ ਵਿਕਲਪਿਕ ਮੋਬਾਈਲ ਨੰਬਰ ਦਾਖਲ ਕਰੋ</string>
+    <string name="enter_mobile_number_mandatory">10 ਅੰਕ ਮੋਬਾਈਲ ਨੰਬਰ *</string>
+    <string name="alternative_mobile_number">ਵਿਕਲਪਿਕ ਮੋਬਾਈਲ ਨੰਬਰ</string>
+    <string name="apply">ਲਾਗੂ ਕਰੋ</string>
+    <string name="filters">ਫਿਲਟਰ</string>
+    <string name="reset">ਰੀਸੈੱਟ</string>
+    <string name="state">ਰਾਜ</string>
+    <string name="searchState">ਖੋਜ ਸਥਿਤੀ</string>
+    <string name="details_missing_validation">ਜਮ੍ਹਾ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਕਿਰਪਾ ਕਰਕੇ ਹੇਠਾਂ ਦਿੱਤੇ ਵੇਰਵੇ ਭਰੋ</string>
+    <string name="owner_s_name">ਮਾਲਕ ਦਾ ਨਾਮ</string>
+    <string name="owner_mobile_number">ਮਾਲਕ ਦਾ ਮੋਬਾਈਲ ਨੰਬਰ</string>
+    <string name="owner_email_id">ਮਾਲਕ ਦੀ ਈਮੇਲ ਆਈਡੀ</string>
+    <string name="owner_pan_number">ਮਾਲਕ ਦਾ ਪੈਨ ਨੰਬਰ</string>
+    <string name="owner_aadhaar_number">ਮਾਲਕ ਦਾ ਆਧਾਰ ਨੰਬਰ</string>
+    <string name="owner_s_picture">ਮਾਲਕ ਦੀ ਤਸਵੀਰ</string>
+    <string name="owner_s_id_proof_front">ਮਾਲਕ ਦਾ ਆਈਡੀ ਪਰੂਫ (ਸਾਹਮਣੇ)</string>
+    <string name="owner_s_id_proof_back">ਮਾਲਕ ਦਾ ID ਪ੍ਰਮਾਣ (ਵਾਪਸ)</string>
+    <string name="dhaba_address_landmark">ਢਾਬੇ ਬਾ ਐਡਰੈੱਸ</string>
+    <string name="dhaba_address_area">ਧਾਬਾ ਪਤਾ ਖੇਤਰ</string>
+    <string name="highway">ਹਾਈਵੇ</string>
+    <string name="dhaba_state">ਢਾਬੇ ਦਾ ਰਾਜ</string>
+    <string name="dhaba_city">ਢਾਬੇ ਦਾ ਸ਼ਹਿਰ</string>
+    <string name="dhaba_pincode">ਢਾਬੇ ਦਾ ਪਿਨਕੋਡ</string>
+    <string name="dhaba_mobile_number">ਢਾਬੇ ਮੋਬਾਈਲ ਨੰਬਰ</string>
+    <string name="dhaba_photo">ਢਾਬਾ ਫੋਟੋ</string>
+    <string name="dhaba_video">ਢਾਬਾ ਵੀਡੀਓ</string>
+    <string name="nh">NH</string>
 
 </resources>
