--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -351,4 +351,47 @@
     <string name="select_bank">बैंक चुनें</string>
     <string name="owner">मालिक</string>
     <string name="deletion_confirmation">क्या आप इस ढाबे को हटाना चाहते हैं?</string>
+    <string name="alternative_contact_person">वैकल्पिक संपर्क व्यक्ति</string>
+    <string name="alternative_contact_number">वैकल्पिक संपर्क नंबर</string>
+    <string name="alternative_contact_designation">वैकल्पिक संपर्क पदनाम</string>
+    <string name="enter_contact_person">कृपया वैकल्पिक संपर्क व्यक्ति का नाम दर्ज करें।</string>
+    <string name="enter_alternative_number">कृपया वैकल्पिक संपर्क नंबर दर्ज करें।</string>
+    <string name="enter_alternative_contact_designation">कृपया वैकल्पिक संपर्क व्यक्ति पदनाम दर्ज करें।</string>
+    <string name="add_highway">इस राजमार्ग को जोड़ें</string>
+    <string name="highway_confirmation">क्या आप जोड़ना चाहते हैं</string>
+    <string name="_dhaba_name">ढाबा का नाम</string>
+    <string name="enter_dhaba_details_first">कृपया पहले ढाबा विवरण भरें।</string>
+    <string name="choose_mechanic">कृपया मैकेनिक शॉप 24x7 विकल्प चुनें।</string>
+    <string name="choose_mechanic_day">कृपया मैकेनिक शॉप डे विकल्प चुनें।</string>
+    <string name="choose_puncture">कृपया पंचर शॉप 24x7 विकल्प चुनें।</string>
+    <string name="choose_puncture_day">कृपया पंचर शॉप डे विकल्प चुनें।</string>
+    <string name="choose_daily_utility">कृपया दैनिक उपयोगिता 24x7 शॉप विकल्प चुनें।</string>
+    <string name="choose_utility_day">कृपया दैनिक उपयोगिता की दुकान दिवस विकल्प चुनें।</string>
+    <string name="enter_valid_alt_number">कृपया वैध वैकल्पिक मोबाइल नंबर दर्ज करें</string>
+    <string name="enter_mobile_number_mandatory">10 अंक मोबाइल नंबर *</string>
+    <string name="alternative_mobile_number">वैकल्पिक मोबाइल नंबर</string>
+    <string name="apply">लागू करना</string>
+    <string name="filters">फिल्टर</string>
+    <string name="reset">रीसेट</string>
+    <string name="state">राज्य</string>
+    <string name="searchState">खोज राज्य</string>
+    <string name="details_missing_validation">कृपया प्रस्तुत करने से पहले निम्नलिखित विवरण भरें</string>
+    <string name="owner_s_name">मालिक का नाम</string>
+    <string name="owner_mobile_number">मालिक का मोबाइल नंबर</string>
+    <string name="owner_email_id">मालिक की ईमेल आईडी</string>
+    <string name="owner_pan_number">मालिक की पैन नंबर</string>
+    <string name="owner_aadhaar_number">मालिक की संख्या</string>
+    <string name="owner_s_picture">मालिक की तस्वीर</string>
+    <string name="owner_s_id_proof_front">मालिक के आईडी प्रूफ (सामने)</string>
+    <string name="owner_s_id_proof_back">मालिक के आईडी प्रूफ (पीछे)</string>
+    <string name="dhaba_address_landmark">ढाबा पता लैंडमार्क</string>
+    <string name="dhaba_address_area">ढाबा पता क्षेत्र</string>
+    <string name="highway">हाइवे</string>
+    <string name="dhaba_state">ढाबा का राज्य</string>
+    <string name="dhaba_city">ढाबा का शहर</string>
+    <string name="dhaba_pincode">ढाबा के पिनकोड</string>
+    <string name="dhaba_mobile_number">ढाबा मोबाइल नंबर</string>
+    <string name="dhaba_photo">ढाबा फोटो</string>
+    <string name="dhaba_video">ढाबा वीडियो</string>
+    <string name="nh">NH</string>
 </resources>
