Add Existing owner, enable clicks on steps view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -368,6 +368,9 @@
     <string name="dhaba_photo">Dhaba Photo</string>
     <string name="dhaba_video">Dhaba Video</string>
     <string name="nh">NH</string>
+    <string name="add_existing_owner">Add Existing Owner</string>
+    <string name="please_enter_a_valid_name">Please enter a valid name</string>
+    <string name="search_owner">Search Owner</string>
 
     <string-array name="select_state">
         <item>Select State</item>
