--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -416,6 +416,8 @@
     <string name="sun">sun</string>
     <string name="please_select_start_time_first">Please select start time first</string>
     <string name="please_select_another_time">Please select another time</string>
+    <string name="please_enter_customer_name">Please enter customer name</string>
+    <string name="please_enter_customer_phone_number">Please enter customer phone umber</string>
 
     <string-array name="select_state">
         <item>Select State</item>
@@ -488,5 +490,12 @@
         <item>@drawable/ic_notification_hilighted</item>
         <item>@drawable/ic_settings_hilighted</item>
     </integer-array>
+
+    <string name="no_customers">No Customers</string>
+    <string name="search_customer">Search Customer</string>
+    <string name="add_customer">Add Customer</string>
+    <string name="customer_name">Customer Name</string>
+    <string name="customer_phone_number">Customer Phone Number</string>
+    <string name="send_invitation">Send Invitation</string>
 
 </resources>
