--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -415,7 +415,7 @@
     <string name="sat">sat</string>
     <string name="sun">sun</string>
     <string name="please_select_start_time_first">Please select start time first</string>
-    <string name="please_select_another_time">Please select another time</string>
+    <string name="please_select_another_time">Please select valid time</string>
     <string name="please_enter_customer_name">Please enter customer name</string>
     <string name="please_enter_customer_phone_number">Please enter customer phone umber</string>
 
