--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -517,5 +517,6 @@
     <string name="search_shop">Search Shop</string>
     <string name="search_product">Search Product</string>
     <string name="select_existing_manager">Select Existing Manager</string>
+    <string name="add_existing_mgr">Add Existing Manager</string>
 
 </resources>
