--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -518,5 +518,8 @@
     <string name="closing_time_validation">End time cannot be before Start time</string>
     <string name="saving_timing">Saving Dhaba Timings</string>
     <string name="call_request_submitted">Request has been submitted. We will call you within 24 hours.</string>
+    <string name="information">Information</string>
+    <string name="reviews">Reviews</string>
+    <string name="add">Add</string>
 
 </resources>
