--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -521,5 +521,6 @@
     <string name="information">Information</string>
     <string name="reviews">Reviews</string>
     <string name="add">Add</string>
+    <string name="no_reviews">No Reviews</string>
 
 </resources>
